--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.12",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.7"
